MagicParticleCreator, Edit MagicCore